--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -8,7 +8,7 @@
 
 .footerTextDesktop {
     background-color: white;
-    margin: 10% auto;
+    margin: 10% ;
     border-radius: 3px;
     padding: 5%;
     max-width: 920px;
