--- a/src/styles/Introduction.css
+++ b/src/styles/Introduction.css
@@ -1,7 +1,7 @@
 .sectionOrganisationIntroduction {
     max-width: 1600px;
     padding-top: 20px;
-    margin: 10% auto;
+    margin: 10% ;
 }
 
 .shadowBoxIntroductionDesktop {
