--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -6,20 +6,20 @@
     background-repeat: no-repeat;
 }
 
-.footerTextDesktop {
-    background-color: white;
-    margin: 10% ;
-    border-radius: 3px;
-    padding: 5%;
-    max-width: 920px;
-}
-
-.footerTextPhone {
+.footerText {
     background-color: white;
     margin: 20% 10%;
     border-radius: 3px;
     padding: 5%;
 }
+
+@media only screen and (min-width: 920px) {
+    .shadowBoxIntroduction {
+        max-width: 920px;
+        margin: 10% ;
+    }
+}
+
 
 .titre {
     color: #EBBB7F;
