--- a/src/styles/Introduction.css
+++ b/src/styles/Introduction.css
@@ -27,11 +27,26 @@
     box-shadow: 1px 1px 5px grey, -1px -1px 5px grey;
 }
 
-.flexStyleShadowBoxIntroduction {
-    flex: 1 1 30%;
-    
+.shadowBoxIntroduction {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    justify-content: space-around;
+    column-gap: 5%;
+    flex-basis: 50px;
+    border-radius: 3px;
+    box-shadow: 1px 1px 5px grey, -1px -1px 5px grey;
 }
 
+@media only screen and (min-width: 920px) {
+    .shadowBoxIntroduction {
+        flex-direction: row;
+    }
+}
+
+.flexStyleShadowBoxIntroduction {
+    flex: 1 1 30%;
+}
 
 
 /* CSS de la section Mes Informations : */
