--- a/src/styles/MesSkills.css
+++ b/src/styles/MesSkills.css
@@ -10,7 +10,7 @@
     margin-bottom: 2%;
 }
 
-.skillsBoxSectionDesktop {
+.skillsBoxSection {
   
     display: flex;
     flex-direction: row;
@@ -19,16 +19,13 @@
     box-shadow: 1px 1px 5px grey, -1px -1px 5px grey;
 }
 
-.skillsBoxSectionPhone {
-  
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-    border-radius: 3px;
-    box-shadow: 1px 1px 5px grey, -1px -1px 5px grey;
-    padding-left: 10%;
+@media only screen and (max-width: 920px) {
+    .skillsBoxSection {
+        flex-direction: column;
+        row-gap: 10px;
+        padding-left: 10%;
+    }
 }
-
 
 .underSection {
     padding: 3%;
