--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -14,9 +14,9 @@
 }
 
 @media only screen and (min-width: 920px) {
-    .shadowBoxIntroduction {
+    .footerText {
         max-width: 920px;
-        margin: 10% ;
+        margin: 10% 40% 10% 10%;
     }
 }
 
